# GameProject

./: IdeiasdeRefatoração.txt  README.md  main.py  pyproject.toml
Objetos/: BarradeVida.py  __init__.py  enemie.py  personagem.py  tiro.py
Telas/: PrimeiraFase.py  __init__.py  config.py  introducao.py  menu.py
Telas/PauseMenu/: __init__.py  allMenu.py  drawMenu.py
Telas/config/: config.py  drawConfig.py
Telas/introducao/: __init__.py  drawIntroduction.py  introducao.py
Telas/menu/: __init__.py  allMenu.py  drawMenu.py
